Fixed spacing

--- a/src/client/styles.css
+++ b/src/client/styles.css
@@ -303,19 +303,22 @@ a {
 .simulation_row {
   display: grid;
   grid-template-columns: auto auto auto;
-  /* column-gap: 50px; */
   justify-items: center;
   width: 100vw;
   margin: 0 auto;
 }
 
+.simulation_row p {
+  width: 150px;
+  text-align: center; 
+}
+
 .slider {
-  appearance: none; /* removes browser-specific styling */
-  width: 300px; /* width of slider */
-  height: 25px; /* height of slider */
-  background: lightgreen ; /* orange background */
-  /* outline: none; */
-  border-radius: 12px; /* round corners */
+  appearance: none; 
+  width: 300px; 
+  height: 25px;
+  background: lightgreen ;
+  border-radius: 12px;
 }
 
 #predictionChart
